Correct spacing

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
@@ -9,4 +9,8 @@
 
 .card.action-panel .panel{
   padding-bottom: 3.5rem;
+
+  .fa-stack{
+    margin-bottom:2rem;
+  }
 }
